// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PostThreadConnector > Snapshots > matches snapshot with dialog-reply variant 1`] = `
<div
  data-override-defaults="true"
  data-variant="dialog-reply"
>
  <div
    class="absolute top-[-13px] -left-3 h-[35px] w-px border-l border-secondary"
    data-override-defaults="true"
  />
  <div
    class="absolute top-[22px] -left-3"
    data-override-defaults="true"
  >
    <svg
      class="fill-secondary"
      fill="none"
      height="12"
      viewBox="0 0 12 12"
      width="12"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M12 12V11C5.92487 11 1 6.07513 1 0H0C0 6.62742 5.37258 12 12 12Z"
        fill-rule="evenodd"
      />
    </svg>
  </div>
</div>
`;

exports[`PostThreadConnector > Snapshots > matches snapshot with large height 1`] = `
<div
  class="flex w-3 flex-col items-start border-l border-border"
  data-override-defaults="true"
  data-variant="regular"
  style="height: 300px;"
>
  <div
    class="relative flex min-h-px w-full shrink-0 grow basis-0 flex-col items-start min-w-3"
    data-override-defaults="true"
  >
    <div
      class="min-h-px w-full min-w-px shrink-0 grow basis-0"
      data-override-defaults="true"
    />
    <div
      class="relative -ml-px size-3 shrink-0"
      data-override-defaults="true"
    >
      <svg
        class="block size-full fill-secondary"
        fill="none"
        height="12"
        preserveAspectRatio="none"
        viewBox="0 0 12 12"
        width="12"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M1 0C1 6.07513 5.92487 11 12 11V12C5.37258 12 0 6.62742 0 0H1Z"
        />
      </svg>
    </div>
  </div>
  <div
    class="min-h-px w-3 min-w-px shrink-0 grow basis-0"
    data-override-defaults="true"
  />
</div>
`;

exports[`PostThreadConnector > Snapshots > matches snapshot with last variant 1`] = `
<div
  class="flex w-3 flex-col items-start"
  data-override-defaults="true"
  data-variant="last"
  style="height: 100px;"
>
  <div
    class="relative flex min-h-px w-full min-w-px shrink-0 grow basis-0 flex-col items-start"
    data-override-defaults="true"
  >
    <div
      class="min-h-px w-full min-w-px shrink-0 grow basis-0 border-l border-border"
      data-override-defaults="true"
    />
    <div
      class="relative size-3 shrink-0"
      data-override-defaults="true"
    >
      <svg
        class="block size-full fill-secondary"
        fill="none"
        height="12"
        preserveAspectRatio="none"
        viewBox="0 0 12 12"
        width="12"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M1 0C1 6.07513 5.92487 11 12 11V12C5.37258 12 0 6.62742 0 0H1Z"
        />
      </svg>
    </div>
  </div>
  <div
    class="min-h-px w-3 min-w-px shrink-0 grow basis-0"
    data-override-defaults="true"
  />
</div>
`;

exports[`PostThreadConnector > Snapshots > matches snapshot with regular variant 1`] = `
<div
  class="flex w-3 flex-col items-start border-l border-border"
  data-override-defaults="true"
  data-variant="regular"
  style="height: 100px;"
>
  <div
    class="relative flex min-h-px w-full shrink-0 grow basis-0 flex-col items-start min-w-3"
    data-override-defaults="true"
  >
    <div
      class="min-h-px w-full min-w-px shrink-0 grow basis-0"
      data-override-defaults="true"
    />
    <div
      class="relative -ml-px size-3 shrink-0"
      data-override-defaults="true"
    >
      <svg
        class="block size-full fill-secondary"
        fill="none"
        height="12"
        preserveAspectRatio="none"
        viewBox="0 0 12 12"
        width="12"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M1 0C1 6.07513 5.92487 11 12 11V12C5.37258 12 0 6.62742 0 0H1Z"
        />
      </svg>
    </div>
  </div>
  <div
    class="min-h-px w-3 min-w-px shrink-0 grow basis-0"
    data-override-defaults="true"
  />
</div>
`;

exports[`PostThreadConnector > Snapshots > matches snapshot with small height 1`] = `
<div
  class="flex w-3 flex-col items-start border-l border-border"
  data-override-defaults="true"
  data-variant="regular"
  style="height: 50px;"
>
  <div
    class="relative flex min-h-px w-full shrink-0 grow basis-0 flex-col items-start min-w-3"
    data-override-defaults="true"
  >
    <div
      class="min-h-px w-full min-w-px shrink-0 grow basis-0"
      data-override-defaults="true"
    />
    <div
      class="relative -ml-px size-3 shrink-0"
      data-override-defaults="true"
    >
      <svg
        class="block size-full fill-secondary"
        fill="none"
        height="12"
        preserveAspectRatio="none"
        viewBox="0 0 12 12"
        width="12"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M1 0C1 6.07513 5.92487 11 12 11V12C5.37258 12 0 6.62742 0 0H1Z"
        />
      </svg>
    </div>
  </div>
  <div
    class="min-h-px w-3 min-w-px shrink-0 grow basis-0"
    data-override-defaults="true"
  />
</div>
`;
